# tauri-windows-plugin-system

./: .gitignore  BENCHMARK_COMPLETION_REPORT.md  Cargo.toml  PRD.md  README.md  TESTING_COMPLETION_REPORT.md  codeflow.xml  final_test_check.sh  generation-prompt.xml  prompt.xml  tauri-plugin-system-implementation.xml  test_prompt.xml  test_status.sh  testing_prompt.xml
.github/workflows/: test.yml
.project_meta/.architecture/: adr_log.json  architecture_constraints.json  architecture_principles.md  coding_standards.md  module_definitions.json  technology_stack.md
.project_meta/.architecture/component_specifications/: permission_system.md  plugin_host.md  plugin_loader.md  plugin_manager.md  ui_integration.md
.project_meta/.architecture/plugin_system/: plugin_api_specification.md  plugin_store_architecture.md  sandbox_architecture.md  security_boundaries.json  wasm_integration_plan.md
.project_meta/.docs/: index.md
.project_meta/.docs/api/: api_reference.md
.project_meta/.docs/architecture/: overview.md
.project_meta/.docs/guides/: developer_guide.md  testing_guide.md  user_guide.md
.project_meta/.errors/: error_log.json  recovery_history.json
.project_meta/.errors/metrics/: distribution_analysis.json  effectiveness_score.json  resolution_efficiency.json
.project_meta/.errors/reports/: error_diagnosis.json
.project_meta/.integration/: integration_status.json
.project_meta/.integration/metrics/: coverage_report.json  interface_compliance.json  stability_index.json
.project_meta/.integration/performance_benchmarks/: benchmark_config.json
.project_meta/.integration/plugin_compatibility_tests/: compatibility_test_config.json
.project_meta/.integration/reports/: compatibility_matrix.json  failure_analysis.json
.project_meta/.integration/security_test_suite/: security_test_config.json
.project_meta/.patterns/: anti_patterns.json  pattern_catalog.json  pattern_schema.json
.project_meta/.patterns/evolution/: pattern_evolution.json
.project_meta/.patterns/metrics/: pattern_metrics.json
.project_meta/.patterns/relationships/: pattern_dependencies.json
.project_meta/.stories/: roadmap.json
.project_meta/.stories/mappings/: story_architectural_impact_map.json  story_dependency_map.json  story_module_map.json  story_requirement_map.json
.project_meta/.testing/: error_simulations.json  execution_log.json  recovery_scenarios.json  structure_validation.json  test_cases.json  test_metrics.json  test_runner.js  tool_functionality_tests.json  verification_checksums.json  workflow_validation.json
.project_meta/.testing/reports/: coverage_analysis.json  error_analysis.json  performance_analysis.json  test_summary.json
.windsurf/rules/: main.md
benches/: plugin_benchmarks.rs
benches/common/: mod.rs
examples/demo-app/: Cargo.toml
examples/demo-app/src/: main.rs
examples/plugin_system_demo/: Cargo.toml
examples/plugin_system_demo/src/: app.js  index.html  style.css
examples/plugin_system_demo/src-tauri/: main.rs  plugin_manager.rs  tauri.conf.json
examples/plugin_system_demo/src-tauri/test_integration/: mod.rs
examples/sample-plugin/: Cargo.toml
examples/sample-plugin/src/: lib.rs
examples/test_plugins/mock_store_server/: Cargo.toml
examples/test_plugins/mock_store_server/src/: main.rs
examples/test_plugins/native_plugin/: Cargo.toml
examples/test_plugins/native_plugin/src/: lib.rs  main.rs
examples/test_plugins/plugin_interface/: Cargo.toml
examples/test_plugins/plugin_interface/src/: lib.rs
examples/test_plugins/security_plugin/: Cargo.toml
examples/test_plugins/security_plugin/src/: lib.rs  main.rs
examples/test_plugins/tools/: package_plugin.rs
examples/test_plugins/wasm_plugin/: Cargo.toml
examples/test_plugins/wasm_plugin/src/: lib.rs
src/: lib.rs
src/permission_system/: mod.rs
src/permissions/: Cargo.toml  README.md
src/permissions/examples/: permission_test.rs
src/permissions/src/: lib.rs  permission_manager.rs  permission_store.rs  permission_types.rs  prompt.rs
src/plugin_host/: mod.rs
src/plugin_loader/: mod.rs
src/plugin_manager/: mod.rs
src/plugin_store/: Cargo.toml  README.md
src/plugin_store/examples/: basic_store_client.rs  plugin_installation.rs
src/plugin_store/src/: api.rs  auth_manager.rs  download_manager.rs  install_manager.rs  lib.rs  local_registry.rs  store_client.rs  store_types.rs
src/resource_monitor/: Cargo.toml  README.md
src/resource_monitor/examples/: resource_monitor_test.rs
src/resource_monitor/src/: lib.rs  monitor.rs  resource_types.rs
src/sandbox/: Cargo.toml  README.md
src/sandbox/examples/: sandbox_test.rs
src/sandbox/src/: lib.rs  tests.rs
src/signature/: Cargo.toml  README.md
src/signature/examples/: signature_test.rs
src/signature/src/: lib.rs
src/ui_integration/: mod.rs
src/wasm_integration/: Cargo.toml  README.md
src/wasm_integration/examples/: plugin_host.rs
src/wasm_integration/src/: api_bridge.rs  lib.rs  security.rs  wasm_runtime.rs  wasm_types.rs
tests/: basic_functionality_test.rs  error_handling_test.rs  lib.rs  performance_test.rs
tests/common/: mod.rs
tests/e2e/: sample_app_tests.rs
tests/fixtures/: create_test_fixtures.rs
tests/fuzzing/: manifest_fuzzer.rs  package_fuzzer.rs
tests/integration/: component_interaction_tests.rs  plugin_lifecycle_tests.rs
tests/unit/permission_system/: permission_tests.rs
tests/unit/plugin_host/: host_tests.rs
tests/unit/plugin_loader/: manifest_tests.rs  package_tests.rs
tests/unit/plugin_manager/: manager_tests.rs
tests/unit/ui_integration/: ui_tests.rs
