[package]
name = "tauri-windows-plugin-system"
version = "0.1.0"
edition = "2021"
description = "A modular, secure plugin system for Tauri applications running on Windows"
authors = ["Yunus Gungor <mail@yunusgungor.com>"]
license = "MIT"
repository = "https://github.com/yunusgungor/tauri-windows-plugin-system"

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
thiserror = "1.0.38"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
chrono = { version = "0.4.23", features = ["serde"] }
libloading = "0.7.4"
zip = "0.6.4"
tauri = { version = "1.2.4", features = ["api-all"] }
tokio = { version = "1.25.0", features = ["full"] }
futures = "0.3.26"

[dev-dependencies]
tempfile = "3.8.0"
tokio-test = "0.4.2"
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
name = "tauri_windows_plugin_system"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bench]]
name = "plugin_benchmarks"
harness = false

[features]
default = ["dynamic-loading"]
dynamic-loading = []

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"

[workspace]
members = [
  "examples/plugin_system_demo",
  "examples/test_plugins/mock_store_server",
]
exclude = [
  "target",
]
