[package]
name = "demo-app"
version = "0.1.0"
edition = "2021"
description = "Demo application for tauri-windows-plugin-system"
authors = ["Yunus Gungor <mail@yunusgungor.com>"]
license = "MIT"

[dependencies]
tauri = { version = "1.2.4", features = ["api-all"] }
tauri-windows-plugin-system = { path = "../../" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }

[build-dependencies]
tauri-build = { version = "1.2.1" }

[[bin]]
name = "demo-app"
path = "src/main.rs"
