[package]
name = "tauri-windows-plugin-system-demo"
version = "0.1.0"
edition = "2021"
description = "Tauri Windows Plugin System Entegrasyon Demo Uygulaması"
authors = ["Tauri Windows Plugin System Team"]
license = "MIT"

[[bin]]
name = "tauri-windows-plugin-system-demo"
path = "src-tauri/main.rs"

[dependencies]
# Tauri bağımlılıkları
tauri = { version = "1.4", features = ["api-all", "system-tray", "updater"] }
tauri-build = { version = "1.4", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Plugin System modülleri
tauri-plugin-sandbox = { path = "../../src/sandbox" }
tauri-plugin-signature = { path = "../../src/signature" }
tauri-plugin-permissions = { path = "../../src/permissions" }
tauri-plugin-resource-monitor = { path = "../../src/resource_monitor" }
tauri-plugin-wasm = { path = "../../src/wasm_integration" }
tauri-plugin-store = { path = "../../src/plugin_store" }

# UI için gerekli bağımlılıklar
tokio = { version = "1.28", features = ["full"] }
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
semver = "1.0"
async-trait = "0.1.68"
once_cell = "1.18"
futures = "0.3"
dirs = "5.0"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
