[package]
name = "tauri-plugin-permissions"
version = "0.1.0"
edition = "2021"
description = "Advanced permission system for Tauri Windows plugins"
authors = ["Tauri Windows Plugin System Team"]
license = "MIT"
repository = "https://github.com/tauri-apps/plugins-workspace"
keywords = ["tauri", "plugin", "permissions", "security", "authorization"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
tauri = { version = "1.4", features = ["api-all"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
once_cell = "1.18"
chrono = "0.4.23"
bitflags = "1.3.2"    # İzinlerin bitflags olarak temsil edilmesi için
futures = "0.3"
parking_lot = "0.12"  # Thread-safe kilit mekanizmaları

[build-dependencies]
tauri-build = { version = "1.4" }
