[package]
name = "tauri-plugin-resource-monitor"
version = "0.1.0"
edition = "2021"
description = "Resource monitoring for Tauri Windows plugins"
authors = ["Tauri Windows Plugin System Team"]
license = "MIT"
repository = "https://github.com/tauri-apps/plugins-workspace"
keywords = ["tauri", "plugin", "resource", "monitoring", "sandbox"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
tauri = { version = "1.4", features = ["api-all"] }
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemInformation",
    "Win32_System_Memory",
    "Win32_System_Performance",
    "Win32_System_WindowsProgramming",
    "Win32_Security"
]}
uuid = { version = "1.3", features = ["v4", "serde"] }
once_cell = "1.18"
chrono = "0.4.23"
futures = "0.3"
tokio = { version = "1.28", features = ["full"] }
parking_lot = "0.12"
sysinfo = "0.29"       # Platform-agnostic sistem bilgisi kütüphanesi
flatbuffers = "23.5.26" # Performanslı veri serileştirme
dashmap = "5.4.0"      # Eşzamanlı HashMap implementasyonu

[build-dependencies]
tauri-build = { version = "1.4" }
