[package]
name = "tauri-plugin-sandbox"
version = "0.1.0"
edition = "2021"
description = "Sandbox isolation for Tauri Windows plugins using Windows Job Objects"
authors = ["Tauri Windows Plugin System Team"]
license = "MIT"
repository = "https://github.com/tauri-apps/plugins-workspace"
keywords = ["tauri", "plugin", "sandbox", "security", "isolation"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
tauri = { version = "1.4", features = ["api-all"] }
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation"
]}
uuid = { version = "1.3", features = ["v4", "serde"] }
once_cell = "1.18"
futures = "0.3"

[build-dependencies]
tauri-build = { version = "1.4" }
