[package]
name = "tauri-plugin-signature"
version = "0.1.0"
edition = "2021"
description = "Digital signature infrastructure for Tauri Windows plugins"
authors = ["Tauri Windows Plugin System Team"]
license = "MIT"
repository = "https://github.com/tauri-apps/plugins-workspace"
keywords = ["tauri", "plugin", "signature", "security", "verification"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
tauri = { version = "1.4", features = ["api-all"] }
ring = "0.16.20"       # Kriptografik operasyonlar için
x509-parser = "0.15.0" # X.509 sertifika desteği
der-parser = "8.2.0"   # DER formatı parser
pem = "2.0.0"          # PEM formatı desteği
chrono = "0.4.23"      # Tarih/zaman işlemleri
base64 = "0.21.0"      # Base64 kodlama/çözme
sha2 = "0.10.6"        # SHA-2 hash fonksiyonları
hex = "0.4.3"          # Hex kodlama/çözme
uuid = { version = "1.3", features = ["v4", "serde"] }
once_cell = "1.18"
futures = "0.3"

[build-dependencies]
tauri-build = { version = "1.4" }
