[package]
name = "mock-plugin-store-server"
version = "0.1.0"
edition = "2021"
description = "Tauri Windows Plugin System için test amaçlı mock plugin store sunucusu"
authors = ["Tauri Windows Plugin System Team"]
license = "MIT"

[dependencies]
# Web sunucu
axum = "0.6.18"
tower-http = { version = "0.4.0", features = ["cors", "fs", "trace"] }
tokio = { version = "1.28.0", features = ["full"] }
tower = "0.4.13"

# Serileştirme ve JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Yardımcı kitaplıklar
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Güvenlik
ring = "0.16.20"
base64 = "0.13.0"
sha2 = "0.10.6"

# Dosya işlemleri
walkdir = "2.3.3"
zip = "0.6.6"
