[package]
name = "plugin-interface"
version = "0.1.0"
edition = "2021"
description = "Interface definitions for Tauri Windows Plugin System test plugins"
authors = ["Tauri Windows Plugin System Team"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
log = "0.4"
