[package]
name = "security-scanner-plugin"
version = "0.1.0"
edition = "2021"
description = "Security Scanner test plugin for Tauri Windows Plugin System"
authors = ["Tauri Windows Plugin System Team"]
license = "MIT"

[dependencies]
# Temel bağımlılıklar
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"

# Güvenlik işlemleri
ring = "0.16"
base64 = "0.13"
sha2 = "0.10"
uuid = { version = "1.3", features = ["v4", "serde"] }

# Windows API
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Storage_FileSystem",
]}

# Test plugin API
plugin-interface = { path = "../plugin_interface" }

[lib]
name = "security_scanner_plugin"
crate-type = ["cdylib"]

[[bin]]
name = "security_scanner_app"
path = "src/main.rs"
