[package]
name = "data-processor-plugin"
version = "0.1.0"
edition = "2021"
description = "WASM test plugin for Tauri Windows Plugin System"
authors = ["Tauri Windows Plugin System Team"]
license = "MIT"

[lib]
name = "data_processor_plugin"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Temel bağımlılıklar
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"

# WASM desteği
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Performance",
    "PerformanceTiming",
] }

# Test plugin API
plugin-interface = { path = "../plugin_interface" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wee_alloc = "0.4.5"

[profile.release]
# WASM optimizasyonu
lto = true
opt-level = 's'  # Size optimizations
